# feature-flag-service

./: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  FEEDBACK_FOR_REVIEW.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d9e556c55835_initial_schema.py
app/: main.py
app/api/v1/: environments.py  evaluate.py  flags.py  health.py  router.py  rules.py
app/core/: auth.py  config.py  database.py  evaluation.py
app/models/: models.py
app/schemas/: schemas.py
docs/: api-reference.md  contributing.md  evaluation.md  getting-started.md  index.md  openapi.json  rules.md
scripts/: seed_demo.py
tests/: conftest.py  test_auth.py  test_environments.py  test_evaluation.py  test_flags.py  test_health.py  test_rules.py
